add fix access detail assertion

--- a/test-output/ExtentReport.html
+++ b/test-output/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Test Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 25, 2024 10:30:20 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 25, 2024 10:49:24 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">PPPL Testing PAD2</p>
             <p class="text-sm">
-              <span>10:30:26 PM</span> / <span>00:01:20:859</span>
+              <span>10:49:29 PM</span> / <span>00:01:08:604</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">PPPL Testing PAD2</h5>
-<span class='badge badge-success'>06.25.2024 10:30:26 PM</span>
-<span class='badge badge-danger'>06.25.2024 10:31:47 PM</span>
-<span class='badge badge-default'>00:01:20:859</span>
+<span class='badge badge-success'>06.25.2024 10:49:29 PM</span>
+<span class='badge badge-danger'>06.25.2024 10:50:38 PM</span>
+<span class='badge badge-default'>00:01:08:604</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,85 +104,92 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:30:26 PM</td>
+        <td>10:49:29 PM</td>
         <td>
           Setup Driver on PublicKajianMainStepDef
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:30:26 PM</td>
+        <td>10:49:29 PM</td>
         <td>
           Setup Driver on PublicKajianMainStepDef
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:30:26 PM</td>
+        <td>10:49:29 PM</td>
         <td>
           Setup Driver on PublicKajianMainStepDef
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:20 PM</td>
+        <td>10:50:07 PM</td>
         <td>
           Open browser at MWCC Main Page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:44 PM</td>
+        <td>10:50:35 PM</td>
         <td>
           Click Kajian on the navigation bar
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:44 PM</td>
+        <td>10:50:35 PM</td>
         <td>
           Actual URL: https://dev.mwcc.masmoendigital.store/kajian
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:31:44 PM</td>
+        <td>10:50:35 PM</td>
         <td>
           Redirected to the Kajian page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:44 PM</td>
+        <td>10:50:35 PM</td>
         <td>
           Setup Driver on PublicKajianMainStepDef
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:45 PM</td>
+        <td>10:50:36 PM</td>
         <td>
           Open browser at MWCC Kajian Page
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>10:31:46 PM</td>
+        <td>10:50:38 PM</td>
         <td>
-          Failed to click Kajian card: element click intercepted: Element is not clickable at point (459, 1534)
+          Failed to click Kajian card: element click intercepted: Element is not clickable at point (459, 1535)
   (Session info: MicrosoftEdge=126.0.2592.68)
 Build info: version: '4.12.0', revision: '249f2a7d1b*'
 System info: os.name: 'Windows 10', os.arch: 'amd64', os.version: '10.0', java.version: '20'
 Driver info: org.openqa.selenium.edge.EdgeDriver
-Command: [c702e0ebeb6f7cba52fe37dd498aea23, clickElement {id=f.FC044C9D662A7110C4C8E097BF0BC95D.d.8CAAD8607EFE74FE1EECFD2B241D3314.e.70}]
-Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 126.0.2592.68, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:35515}, msedge: {msedgedriverVersion: 126.0.2592.68 (30e1b6cc72a8..., userDataDir: C:\Users\MYCOMP~1\AppData\L...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:35515/devtoo..., se:cdpVersion: 126.0.2592.68, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[EdgeDriver: MicrosoftEdge on windows (c702e0ebeb6f7cba52fe37dd498aea23)] -> css selector: .kajian-item .btn-view]
-Session ID: c702e0ebeb6f7cba52fe37dd498aea23
+Command: [16470dc2db4571fea7f477133f4e413e, clickElement {id=f.8D66CE65DA436FF7408E7DB8442216A2.d.FF4ADA6FF9D63DCB5813A0801E0E07C0.e.73}]
+Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 126.0.2592.68, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:36457}, msedge: {msedgedriverVersion: 126.0.2592.68 (30e1b6cc72a8..., userDataDir: C:\Users\MYCOMP~1\AppData\L...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:36457/devtoo..., se:cdpVersion: 126.0.2592.68, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[EdgeDriver: MicrosoftEdge on windows (16470dc2db4571fea7f477133f4e413e)] -> css selector: .kajian-item .btn-view]
+Session ID: 16470dc2db4571fea7f477133f4e413e
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>10:31:47 PM</td>
+        <td>10:50:38 PM</td>
+        <td>
+          Redirected to Kajian detail page
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log info-bg">Info</span></td>
+        <td>10:50:38 PM</td>
         <td>
           Close browser
         </td>
@@ -206,13 +213,13 @@ Session ID: c702e0ebeb6f7cba52fe37dd498aea23
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 25, 2024 10:30:20 PM</h3>
+<h3>Jun 25, 2024 10:49:24 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 25, 2024 10:31:47 PM</h3>
+<h3>Jun 25, 2024 10:50:38 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -263,10 +270,10 @@ Session ID: c702e0ebeb6f7cba52fe37dd498aea23
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='9%'><b>1</b> events passed</small></div>
+<div><small data-tooltip='8%'><b>1</b> events passed</small></div>
 <div>
-<small data-tooltip='9%'><b>1</b> events failed,
-<b data-tooltip='%'>9</b> others
+<small data-tooltip='8%'><b>1</b> events failed,
+<b data-tooltip='%'>10</b> others
 </small>
 </div>
 </div>
@@ -282,7 +289,7 @@ Session ID: c702e0ebeb6f7cba52fe37dd498aea23
 </div></div>
 <script>
 var timeline = {
-"PPPL Testing PAD2":80.859
+"PPPL Testing PAD2":68.604
 };
 </script>
 <div class="row">
@@ -330,7 +337,7 @@ passEvents: 1,
 failEvents: 1,
 warningEvents: 0,
 skipEvents: 0,
-infoEvents: 9
+infoEvents: 10
 };
 </script>        </div>
       </div>
